--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,7 +5,7 @@ on:
       - main
 
 env:
-  AWS_REGION: "ap-south-1"
+  AWS_REGION: "us-east-2"
   IMAGE_TAG: "latest"
   ECR_REPOSITORY: "tf-automation-repo"
   TASK_DEFINITON: task-definition.json
@@ -21,18 +21,18 @@ permissions:
 jobs:
   terraform:
     name: terraform
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::**********:role/Github
           role-session-name: Github
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon Ecr
         id: login-ecr
@@ -42,7 +42,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry}}
-          IMAGE_TAG: ${{ env.IMAGE_TAG }}
+          IMAGE_TAG: ${{ secrets.IMAGE_TAG }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./app/
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
@@ -55,8 +55,8 @@ jobs:
       - name: Export task definition
         id: export-td
         env:
-          TD_NAME: ${{ env.TASK_DEFINITON }}
-          TD_FAMILY: ${{ env.TASK_DEFINITION_FAMILY}}
+          TD_NAME: ${{ secrets.TASK_DEFINITON }}
+          TD_FAMILY: ${{ secrets.TASK_DEFINITION_FAMILY}}
         run: |
           rm -rf $TD_NAME
           aws ecs describe-task-definition --task-definition $TD_FAMILY --query taskDefinition > $TD_NAME
@@ -69,13 +69,13 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition/@v1
         with:
-          task-definition: ${{ env.TASK_DEFINITON }}
-          container-name: ${{ env.CONTAINER_NAME }}
+          task-definition: ${{ secrets.TASK_DEFINITON }}
+          container-name: ${{ secrets.CONTAINER_NAME }}
           image: ${{ steps.build-image.outputs.image }}
       
       - name: Deploy task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ env.TASK_DEFINITON }}
-          service: ${{ env.SERVICE}}
-          cluster: ${{ env.CLUSTER}}
+          service: ${{ secrets.SERVICE}}
+          cluster: ${{ secrets.CLUSTER}}
