--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:iam::**********:role/Github
-          role-session-name: Github
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+           aws-region:${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon Ecr
         id: login-ecr
